Update README and package.json: add VS Code Marketplace badge, update image URLs, and increment version to 1.0.1

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "engprompt",
+  "icon": "images/logo.png",
   "displayName": "EngPrompt",
   "description": "Transform any language into AI-optimized English prompts for enhanced GitHub Copilot and AI interactions",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "Metonya",
   "repository": {
     "type": "git",
